--- a/WebApp/DemoApp/Properties/launchSettings.json
+++ b/WebApp/DemoApp/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:62372",
+      "applicationUrl": "http://localhost:8080",
       "sslPort": 0
     }
   },
@@ -15,23 +15,22 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "DemoApp": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": "true",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
-    },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "launchUrl": "{Scheme}://{ServiceHost}:8080",
       "environmentVariables": {
         "DOCKER_BUILDKIT": "0"
-      },
-      "publishAllPorts": true
+      }
+    },
+    "DemoApp": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "http://localhost:8080",
+      "applicationUrl": "http://localhost:8080",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      }
     }
   }
 }
