Change the name of container

--- a/Deployments/deploy.yml
+++ b/Deployments/deploy.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       terminationGracePeriodSeconds: 1
       containers:
-      - name: webapp-pod
+      - name: webapp-ctr
         image: ilabsllc/demoapp
         imagePullPolicy: Always
         ports:
